Implement ShopList module

--- a/PaybackAssessment/Modules/Home/View/tableViewCells/ItemTableViewCell.xib
+++ b/PaybackAssessment/Modules/Home/View/tableViewCells/ItemTableViewCell.xib
@@ -34,12 +34,18 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Name label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DFn-IN-DMS">
                                         <rect key="frame" x="0.0" y="0.0" width="235" height="19.5"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WFV-8s-8Io">
-                                        <rect key="frame" x="0.0" y="25.5" width="235" height="49.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WFV-8s-8Io">
+                                        <rect key="frame" x="0.0" y="25.5" width="235" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
+                                        <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T9K-wl-xtN">
+                                        <rect key="frame" x="0.0" y="31.5" width="235" height="43.5"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
                                         <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -48,6 +54,7 @@
                         </subviews>
                     </stackView>
                 </subviews>
+                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="NW6-yN-y7P" firstAttribute="leading" secondItem="m56-u1-iSu" secondAttribute="leading" constant="16" id="3vI-UM-yH8"/>
                     <constraint firstItem="NW6-yN-y7P" firstAttribute="top" secondItem="m56-u1-iSu" secondAttribute="top" constant="16" id="9eO-jM-siQ"/>
@@ -56,7 +63,9 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="U84-C5-IRc"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
+                <outlet property="descriptionLabel" destination="T9K-wl-xtN" id="7Xf-nt-gGI"/>
                 <outlet property="headLineLabel" destination="DFn-IN-DMS" id="VnU-K4-enH"/>
                 <outlet property="patchImageView" destination="aXi-ZP-HX9" id="2da-Xm-nTL"/>
                 <outlet property="sublineLabel" destination="WFV-8s-8Io" id="PGY-3n-5Vy"/>
