--- a/PaybackAssessment/Modules/ImageDetail/View/ImageDetailViewController.xib
+++ b/PaybackAssessment/Modules/ImageDetail/View/ImageDetailViewController.xib
@@ -10,64 +10,45 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ImageDetailViewController" customModule="PaybackAssessment" customModuleProvider="target">
             <connections>
-                <outlet property="tailDetailImage" destination="c6I-dG-UGj" id="a1E-2s-CrB"/>
-                <outlet property="view" destination="RIl-0h-JHo" id="q17-YO-aRg"/>
+                <outlet property="tailDetailImage" destination="QGA-ZL-BwZ" id="rOe-eX-OI7"/>
+                <outlet property="view" destination="QWQ-H0-JJD" id="dbF-Rl-QEE"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <viewController storyboardIdentifier="ShowCertificateViewController" modalTransitionStyle="crossDissolve" modalPresentationStyle="overFullScreen" id="D7C-jQ-NaE">
-            <view key="view" contentMode="scaleToFill" id="RIl-0h-JHo">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kvr-jf-uUE" userLabel="outside">
-                        <rect key="frame" x="0.0" y="4" width="414" height="887"/>
-                    </button>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3fa-5a-8Ra" userLabel="Bottom View">
-                        <rect key="frame" x="0.0" y="862" width="414" height="0.0"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstAttribute="height" id="ZGW-po-HhY"/>
-                        </constraints>
-                    </view>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="c6I-dG-UGj">
-                        <rect key="frame" x="24" y="349" width="366" height="208"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="208" id="bbt-fp-EOc"/>
-                        </constraints>
-                    </imageView>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="53y-Dk-Ul3">
-                        <rect key="frame" x="24" y="58" width="42" height="42"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="53y-Dk-Ul3" secondAttribute="height" multiplier="1:1" id="IYh-wx-DSD"/>
-                            <constraint firstAttribute="width" constant="42" id="Wib-or-5D0"/>
-                        </constraints>
-                        <state key="normal" image="white-circle-cross"/>
-                        <connections>
-                            <action selector="cancelButtonTouchUpInside:" destination="-1" eventType="touchUpInside" id="PId-AY-Xdg"/>
-                        </connections>
-                    </button>
-                </subviews>
-                <viewLayoutGuide key="safeArea" id="VNJ-FM-5yp"/>
-                <color key="backgroundColor" red="0.21176470589999999" green="0.21176470589999999" blue="0.21176470589999999" alpha="0.90000000000000002" colorSpace="calibratedRGB"/>
-                <constraints>
-                    <constraint firstItem="VNJ-FM-5yp" firstAttribute="trailing" secondItem="c6I-dG-UGj" secondAttribute="trailing" constant="24" id="3LG-aM-eEy"/>
-                    <constraint firstItem="Kvr-jf-uUE" firstAttribute="leading" secondItem="VNJ-FM-5yp" secondAttribute="leading" id="3h1-dj-6PF"/>
-                    <constraint firstItem="3fa-5a-8Ra" firstAttribute="leading" secondItem="VNJ-FM-5yp" secondAttribute="leading" id="5am-Gb-Op4"/>
-                    <constraint firstItem="c6I-dG-UGj" firstAttribute="centerY" secondItem="VNJ-FM-5yp" secondAttribute="centerY" id="7jt-DZ-f78"/>
-                    <constraint firstItem="VNJ-FM-5yp" firstAttribute="bottom" secondItem="3fa-5a-8Ra" secondAttribute="bottom" id="BoU-le-7rW"/>
-                    <constraint firstItem="53y-Dk-Ul3" firstAttribute="top" secondItem="RIl-0h-JHo" secondAttribute="top" constant="58" id="GSP-mG-N0Q"/>
-                    <constraint firstItem="VNJ-FM-5yp" firstAttribute="top" secondItem="Kvr-jf-uUE" secondAttribute="top" constant="40" id="HVz-Ad-jtB"/>
-                    <constraint firstItem="Kvr-jf-uUE" firstAttribute="bottom" secondItem="VNJ-FM-5yp" secondAttribute="bottom" constant="29" id="UNu-ww-clz"/>
-                    <constraint firstItem="53y-Dk-Ul3" firstAttribute="leading" secondItem="VNJ-FM-5yp" secondAttribute="leading" constant="24" id="WjL-42-yiH"/>
-                    <constraint firstItem="VNJ-FM-5yp" firstAttribute="trailing" secondItem="Kvr-jf-uUE" secondAttribute="trailing" id="d2F-ZS-cXH"/>
-                    <constraint firstItem="c6I-dG-UGj" firstAttribute="leading" secondItem="VNJ-FM-5yp" secondAttribute="leading" constant="24" id="m2P-9Z-ktq"/>
-                    <constraint firstItem="c6I-dG-UGj" firstAttribute="centerX" secondItem="VNJ-FM-5yp" secondAttribute="centerX" id="n1g-SX-5mV"/>
-                    <constraint firstItem="VNJ-FM-5yp" firstAttribute="trailing" secondItem="3fa-5a-8Ra" secondAttribute="trailing" id="tnH-z5-KuD"/>
-                </constraints>
-            </view>
-            <point key="canvasLocation" x="3225" y="161"/>
-        </viewController>
+        <view contentMode="scaleToFill" id="QWQ-H0-JJD">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QGA-ZL-BwZ">
+                    <rect key="frame" x="24" y="349" width="366" height="208"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="208" id="Zjx-Zm-Bys"/>
+                    </constraints>
+                </imageView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lrn-2c-g2S">
+                    <rect key="frame" x="24" y="46" width="42" height="42"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="lrn-2c-g2S" secondAttribute="height" multiplier="1:1" id="3ro-lW-5JK"/>
+                        <constraint firstAttribute="width" constant="42" id="zOM-cd-9Gc"/>
+                    </constraints>
+                    <state key="normal" image="white-circle-cross"/>
+                    <connections>
+                        <action selector="cancelButtonTouchUpInside:" destination="-1" eventType="touchUpInside" id="Qo6-IT-uXh"/>
+                    </connections>
+                </button>
+            </subviews>
+            <viewLayoutGuide key="safeArea" id="yHX-4z-RXS"/>
+            <color key="backgroundColor" red="0.21176470589999999" green="0.21176470589999999" blue="0.21176470589999999" alpha="0.90000000000000002" colorSpace="calibratedRGB"/>
+            <constraints>
+                <constraint firstItem="lrn-2c-g2S" firstAttribute="leading" secondItem="yHX-4z-RXS" secondAttribute="leading" constant="24" id="6O9-Ij-Hea"/>
+                <constraint firstItem="QGA-ZL-BwZ" firstAttribute="leading" secondItem="yHX-4z-RXS" secondAttribute="leading" constant="24" id="Cg4-70-yzT"/>
+                <constraint firstItem="QGA-ZL-BwZ" firstAttribute="centerX" secondItem="yHX-4z-RXS" secondAttribute="centerX" id="UJg-xe-tSG"/>
+                <constraint firstItem="QGA-ZL-BwZ" firstAttribute="centerY" secondItem="yHX-4z-RXS" secondAttribute="centerY" id="uHx-K7-Ijt"/>
+                <constraint firstItem="yHX-4z-RXS" firstAttribute="trailing" secondItem="QGA-ZL-BwZ" secondAttribute="trailing" constant="24" id="uQA-Qp-lrx"/>
+                <constraint firstItem="lrn-2c-g2S" firstAttribute="top" secondItem="QWQ-H0-JJD" secondAttribute="top" constant="46" id="xha-zl-Gyv"/>
+            </constraints>
+            <point key="canvasLocation" x="2884" y="111"/>
+        </view>
     </objects>
     <resources>
         <image name="white-circle-cross" width="72" height="72"/>
